# 01_GraProject

./: .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
app/pages/: 01_dataset.py  02_models.py  03_experiment.py  04_reports.py
app/ui/: constants.py  helpers.py  layout.py  state.py  styles.py
app/ui/sections/: charts.py  dataset.py  evaluation.py  models.py  results.py
config/: satisfaction_profile.yml
data/manifests/: demo_manifest.json  yesno_manifest.json
data/reports/worker_probe/: input.json  output_manual.json
data/sample/: sample_01.txt  sample_02.txt  sample_03.txt
desktop/: launcher.py
docs/: overall_design.md
scripts/: download_yesno_dataset.py  generate_demo_dataset.py  run_demo_experiment.py
src/asr_eval_system/: __init__.py  schemas.py  service.py  workflow.py
src/asr_eval_system/config/: __init__.py  settings.py
src/asr_eval_system/data/: __init__.py  audio_utils.py  dataset.py
src/asr_eval_system/metrics/: __init__.py  performance.py  satisfaction.py  text_metrics.py
src/asr_eval_system/models/: __init__.py  base.py  cnn_ctc.py  faster_whisper_adapter.py  paddlespeech_adapter.py  registry.py  rnn_ctc.py  simulated.py
src/asr_eval_system/reporting/: __init__.py  report_generator.py
src/asr_eval_system/runner/: __init__.py  evaluation.py  subprocess_worker.py
src/asr_eval_system/storage/: __init__.py  database.py
tests/: test_metrics_and_data.py  test_pipeline.py
开题文档/: 1.开题报告.docx  3.任务书.docx
